Revision history for Dist-Zilla-Plugin-Git-FilePermissions

{{$NEXT}}

  - skip needs $how_many with Test::More < 1.302013_009
  - Removed autodie in tests
  - Code cleanup - moved all 'use' before 'has'

1.000  2018-04-02 22:38:46 UTC

  - No code changes
  - Distribution cleanup
  - Bumped dependency on Moose to 2.1203

0.004  2018-02-11 18:47:41 UTC

  - Ignore files that don't exist or where Git thinks they are a file but
    they are something else (e.g. submodules)

0.003  2017-10-20 23:39:10 UTC

  - Added a default option to specify default permissions

0.002  2017-10-16 21:46:46 UTC

  - Fix the tests for Windows

0.001  2017-10-15 19:39:17 UTC

  - Initial release