@@ -60,6 +60,10 @@ cloned project to install them:
 
   $ cpanm --installdeps --with-develop .
 
+Or if you plan on using Dist::Zilla, install all author dependencies with:
+
+  $ cpanm --installdeps --with-develop --with-feature dzil .
+
 You can run tests directly using the prove tool:
 
   $ prove -l
@@ -70,7 +74,7 @@ Including the author tests:
 
   $ prove -lvr xt/
 
-or with Dist::Zilla
+or with Dist::Zilla:
 
   $ dzil test
   $ dzil test --release
