@@ -30,7 +30,7 @@
          "requires" : {
             "Dist::Zilla::Role::BeforeBuild" : "0",
             "Git::Wrapper" : "0",
-            "Moose" : "2.1203",
+            "Moose" : "0",
             "Path::Tiny" : "0",
             "Safe::Isa" : "0",
             "Try::Tiny" : "0",
@@ -46,7 +46,7 @@
             "Test::DZil" : "0",
             "Test::Fatal" : "0",
             "Test::More" : "0.88",
-            "Test::TempDir::Tiny" : "0.017",
+            "Test::TempDir::Tiny" : "0",
             "lib" : "0",
             "perl" : "5.006"
          }
