@@ -7,7 +7,7 @@ build_requires:
   Test::DZil: '0'
   Test::Fatal: '0'
   Test::More: '0.88'
-  Test::TempDir::Tiny: '0.017'
+  Test::TempDir::Tiny: '0'
   lib: '0'
   perl: '5.006'
 configure_requires:
@@ -31,7 +31,7 @@ provides:
 requires:
   Dist::Zilla::Role::BeforeBuild: '0'
   Git::Wrapper: '0'
-  Moose: '2.1203'
+  Moose: '0'
   Path::Tiny: '0'
   Safe::Isa: '0'
   Try::Tiny: '0'
