@@ -1,6 +1,6 @@
 requires 'Dist::Zilla::Role::BeforeBuild';
 requires 'Git::Wrapper';
-requires 'Moose', '2.1203';
+requires 'Moose';
 requires 'Path::Tiny';
 requires 'Safe::Isa';
 requires 'Try::Tiny';
@@ -19,9 +19,8 @@ on test => sub {
     requires 'Test::DZil';
     requires 'Test::Fatal';
     requires 'Test::More', '0.88';
-    requires 'Test::TempDir::Tiny', '0.017';
+    requires 'Test::TempDir::Tiny';
     requires 'lib';
-    requires 'perl', '5.006';
 };
 
 on develop => sub {
@@ -32,7 +31,6 @@ on develop => sub {
     requires 'Perl::Critic::MergeProfile';
     requires 'Perl::Critic::Policy::Bangs::ProhibitDebuggingModules', '1.12';
     requires 'Perl::Critic::Policy::Bangs::ProhibitFlagComments', '1.12';
-    requires 'Perl::Critic::Policy::Bangs::ProhibitNumberedNames', '1.12';
     requires 'Perl::Critic::Policy::Bangs::ProhibitRefProtoOrProto', '1.12';
     requires 'Perl::Critic::Policy::Bangs::ProhibitUselessRegexModifiers', '1.12';
     requires 'Perl::Critic::Policy::BuiltinFunctions::ProhibitDeleteOnArrays', '0.02';
@@ -55,27 +53,27 @@ on develop => sub {
     requires 'Perl::Critic::Policy::Documentation::RequireEndBeforeLastPod', '96';
     requires 'Perl::Critic::Policy::Documentation::RequireFilenameMarkup', '96';
     requires 'Perl::Critic::Policy::Documentation::RequireLinkedURLs', '96';
-    requires 'Perl::Critic::Policy::Freenode::AmpersandSubCalls', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::ArrayAssignAref', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::BarewordFilehandles', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::ConditionalDeclarations', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::ConditionalImplicitReturn', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::DeprecatedFeatures', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::DiscouragedModules', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::DollarAB', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::Each', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::IndirectObjectNotation', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::ModPerl', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::OpenArgs', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::OverloadOptions', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::POSIXImports', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::PackageMatchesFilename', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::Prototypes', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::StrictWarnings', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::Threads', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::Wantarray', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::WarningsSwitch', '0.026';
-    requires 'Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment', '0.026';
+    requires 'Perl::Critic::Policy::Freenode::AmpersandSubCalls', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::ArrayAssignAref', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::BarewordFilehandles', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::ConditionalDeclarations', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::ConditionalImplicitReturn', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::DeprecatedFeatures', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::DiscouragedModules', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::DollarAB', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::Each', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::IndirectObjectNotation', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::ModPerl', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::OpenArgs', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::OverloadOptions', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::POSIXImports', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::PackageMatchesFilename', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::Prototypes', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::StrictWarnings', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::Threads', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::Wantarray', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::WarningsSwitch', '0.027';
+    requires 'Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment', '0.027';
     requires 'Perl::Critic::Policy::HTTPCookies', '0.53';
     requires 'Perl::Critic::Policy::Lax::ProhibitComplexMappings::LinesNotStatements', '0.013';
     requires 'Perl::Critic::Policy::Modules::PerlMinimumVersion', '1.003';
@@ -84,7 +82,7 @@ on develop => sub {
     requires 'Perl::Critic::Policy::Modules::ProhibitUseQuotedVersion', '96';
     requires 'Perl::Critic::Policy::Modules::RequireExplicitInclusion', '0.05';
     requires 'Perl::Critic::Policy::Modules::RequirePerlVersion', '1.003';
-    requires 'Perl::Critic::Policy::Moo::ProhibitMakeImmutable', '0.02';
+    requires 'Perl::Critic::Policy::Moo::ProhibitMakeImmutable', '0.03';
     requires 'Perl::Critic::Policy::Moose::ProhibitDESTROYMethod', '1.05';
     requires 'Perl::Critic::Policy::Moose::ProhibitLazyBuild', '1.05';
     requires 'Perl::Critic::Policy::Moose::ProhibitMultipleWiths', '1.05';
@@ -97,7 +95,7 @@ on develop => sub {
     requires 'Perl::Critic::Policy::Tics::ProhibitManyArrows', '0.009';
     requires 'Perl::Critic::Policy::Tics::ProhibitUseBase', '0.009';
     requires 'Perl::Critic::Policy::TryTiny::RequireBlockTermination', '0.01';
-    requires 'Perl::Critic::Policy::TryTiny::RequireUse', '0.02';
+    requires 'Perl::Critic::Policy::TryTiny::RequireUse', '0.03';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::ConstantBeforeLt', '96';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::NotWithCompare', '96';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::PreventSQLInjection', 'v1.4.0';
@@ -106,9 +104,11 @@ on develop => sub {
     requires 'Perl::Critic::Policy::ValuesAndExpressions::ProhibitDuplicateHashKeys', '96';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::ProhibitEmptyCommas', '96';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::ProhibitNullStatements', '96';
+    requires 'Perl::Critic::Policy::ValuesAndExpressions::ProhibitSingleArgArraySlice', '0.004';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::ProhibitUnknownBackslash', '96';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::RequireNumericVersion', '96';
     requires 'Perl::Critic::Policy::ValuesAndExpressions::UnexpandedSpecialLiteral', '96';
+    requires 'Perl::Critic::Policy::Variables::ProhibitLoopOnHash', '0.006';
     requires 'Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter', '0.102';
     requires 'Perl::Critic::Policy::Variables::ProhibitUselessInitialization', '0.02';
     requires 'Pod::Wordlist';
@@ -136,4 +136,96 @@ on develop => sub {
     requires 'Test::Version', '0.04';
     requires 'XT::Util';
     requires 'lib';
+};
+feature 'dzil', 'Dist::Zilla' => sub {
+on develop => sub {
+        requires 'App::Prove';
+        requires 'CHI';
+        requires 'CPAN::Meta::Prereqs::Filter';
+        requires 'CPAN::Meta::YAML';
+        requires 'CPAN::Perl::Releases';
+        requires 'Carp';
+        requires 'Dist::Zilla';
+        requires 'Dist::Zilla::File::InMemory';
+        requires 'Dist::Zilla::File::OnDisk';
+        requires 'Dist::Zilla::Plugin::AutoPrereqs';
+        requires 'Dist::Zilla::Plugin::AutoPrereqs::Perl::Critic';
+        requires 'Dist::Zilla::Plugin::Bootstrap::lib';
+        requires 'Dist::Zilla::Plugin::CheckChangesHasContent';
+        requires 'Dist::Zilla::Plugin::CheckIssues';
+        requires 'Dist::Zilla::Plugin::CheckMetaResources';
+        requires 'Dist::Zilla::Plugin::CheckPrereqsIndexed';
+        requires 'Dist::Zilla::Plugin::CheckSelfDependency';
+        requires 'Dist::Zilla::Plugin::CheckStrictVersion';
+        requires 'Dist::Zilla::Plugin::ConfirmRelease';
+        requires 'Dist::Zilla::Plugin::ExecDir';
+        requires 'Dist::Zilla::Plugin::FinderCode';
+        requires 'Dist::Zilla::Plugin::Git::CheckFor::CorrectBranch';
+        requires 'Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts';
+        requires 'Dist::Zilla::Plugin::Git::Commit';
+        requires 'Dist::Zilla::Plugin::Git::Contributors';
+        requires 'Dist::Zilla::Plugin::Git::FilePermissions';
+        requires 'Dist::Zilla::Plugin::Git::GatherDir', '2.016';
+        requires 'Dist::Zilla::Plugin::Git::Push';
+        requires 'Dist::Zilla::Plugin::Git::RequireUnixEOL';
+        requires 'Dist::Zilla::Plugin::Git::Tag';
+        requires 'Dist::Zilla::Plugin::GithubMeta';
+        requires 'Dist::Zilla::Plugin::InstallGuide', '1.200007';
+        requires 'Dist::Zilla::Plugin::License';
+        requires 'Dist::Zilla::Plugin::MakeMaker';
+        requires 'Dist::Zilla::Plugin::Manifest';
+        requires 'Dist::Zilla::Plugin::ManifestSkip';
+        requires 'Dist::Zilla::Plugin::MetaJSON';
+        requires 'Dist::Zilla::Plugin::MetaNoIndex';
+        requires 'Dist::Zilla::Plugin::MetaProvides::Package';
+        requires 'Dist::Zilla::Plugin::MetaYAML';
+        requires 'Dist::Zilla::Plugin::MinimumPerl', '1.006';
+        requires 'Dist::Zilla::Plugin::NextRelease';
+        requires 'Dist::Zilla::Plugin::Prereqs';
+        requires 'Dist::Zilla::Plugin::PromptIfStale';
+        requires 'Dist::Zilla::Plugin::PruneCruft';
+        requires 'Dist::Zilla::Plugin::ReadmeAnyFromPod';
+        requires 'Dist::Zilla::Plugin::ReversionOnRelease';
+        requires 'Dist::Zilla::Plugin::SetScriptShebang';
+        requires 'Dist::Zilla::Plugin::ShareDir';
+        requires 'Dist::Zilla::Plugin::TestRelease';
+        requires 'Dist::Zilla::Plugin::UploadToCPAN';
+        requires 'Dist::Zilla::Plugin::VerifyPhases';
+        requires 'Dist::Zilla::Plugin::VersionFromMainModule';
+        requires 'Dist::Zilla::Plugin::lib';
+        requires 'Dist::Zilla::Role::AfterBuild';
+        requires 'Dist::Zilla::Role::AfterRelease';
+        requires 'Dist::Zilla::Role::BeforeRelease';
+        requires 'Dist::Zilla::Role::FileFinderUser';
+        requires 'Dist::Zilla::Role::FileGatherer';
+        requires 'Dist::Zilla::Role::FileMunger';
+        requires 'Dist::Zilla::Role::PluginBundle::Config::Slicer';
+        requires 'Dist::Zilla::Role::PluginBundle::Easy';
+        requires 'Dist::Zilla::Role::TestRunner';
+        requires 'Dist::Zilla::Role::TextTemplate';
+        requires 'Dist::Zilla::Types', '6.000';
+        requires 'Dist::Zilla::Util';
+        requires 'Dist::Zilla::Util::BundleInfo';
+        requires 'Dist::Zilla::Util::CurrentCmd';
+        requires 'Dist::Zilla::Util::ExpandINI::Reader';
+        requires 'File::Compare';
+        requires 'File::HomeDir';
+        requires 'File::Spec';
+        requires 'File::Temp';
+        requires 'File::pushd';
+        requires 'HTTP::Tiny::Mech';
+        requires 'List::Util';
+        requires 'Module::CPANfile', '1.1004';
+        requires 'Module::Metadata';
+        requires 'Moose', '0.99';
+        requires 'Moose::Role';
+        requires 'Scalar::Util';
+        requires 'Term::ANSIColor';
+        requires 'Text::Template';
+        requires 'WWW::Mechanize::Cached';
+        requires 'constant';
+        requires 'namespace::autoclean', '0.09';
+        requires 'perl', '5.010';
+        requires 'version', '0.77';
+};
 };
