@@ -12,9 +12,7 @@ lib = dzil-inc/lib
 
 [@Author::SKIRMESS]
 :version = 1.000
-Author::SKIRMESS::ProjectSkeleton.appveyor_earliest_perl  = 5.14
-Author::SKIRMESS::ProjectSkeleton.ci_dist_zilla           = 1
-Author::SKIRMESS::ProjectSkeleton.ci_earliest_perl        = 5.10.1
+ci_earliest_perl = 5.14
 
 [Prereqs]
 -phase = test
