@@ -2,4 +2,3 @@
 [-RegularExpressions::RequireDotMatchAnything]
 [-RegularExpressions::RequireExtendedFormatting]
 [-RegularExpressions::RequireLineBoundaryMatching]
-[-ValuesAndExpressions::ProhibitLeadingZeros]
